[gd_scene load_steps=12 format=2]

[ext_resource path="res://dani_sandbox/scripts/BattlePlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/prototipos/characters_sprites/knight_f_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://assets/prototipos/characters_sprites/knight_f_hit_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://assets/prototipos/characters_sprites/knight_f_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://assets/prototipos/characters_sprites/knight_f_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/prototipos/characters_sprites/knight_f_idle_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://assets/prototipos/characters_sprites/weapon_regular_sword.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.85294, 11.0416 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 120.0, 0.0 ]
}

[node name="Battle_Player" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Character" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.520279, 3.19599 )
shape = SubResource( 2 )

[node name="Weapon" type="AnimatedSprite" parent="."]
position = Vector2( 13.75, 2.75 )
frames = SubResource( 3 )
animation = "attack"
offset = Vector2( 0, -2.125 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/attack = SubResource( 4 )
[connection signal="playerAttack" from="." to="." method="_on_Battle_Player_playerAttack"]
[connection signal="animation_finished" from="Character" to="." method="_on_Character_animation_finished"]
[connection signal="animation_finished" from="Weapon" to="." method="_on_Weapon_animation_finished"]
